--- a/css/main.css
+++ b/css/main.css
@@ -77,13 +77,22 @@ body {
   display: -ms-flexbox;
   display: flex;
   height: 50%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: right;
-      -ms-flex-pack: right;
-          justify-content: right;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-size: 50px;
   font-weight: bolder;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.mini {
+  color: #a570d6;
+  font-size: 20px;
 }
 /*# sourceMappingURL=main.css.map */
